--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   color: blue;
   box-sizing: border-box;
   box-shadow: 0px 8px 20px 10px rgb(31, 181, 231);
-  position: fixed;
+  position: static;
   margin-bottom: 70px;
 }
 .foobar {
@@ -26,6 +26,7 @@
   box-sizing: border-box;
   box-shadow: 0px 0px 20px 10px rgb(31, 181, 231);
   margin: 0px;
+  margin-top: 20px;
 }
 .alert {
   width: auto;
