--- a/style.css
+++ b/style.css
@@ -74,3 +74,7 @@ body {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
 }
+.moiz{
+  display: flex;
+  justify-content: space-around;
+}
